--- a/OneDrive/Máy tính/FSHOP/public/css/auth/signin.css
+++ b/OneDrive/Máy tính/FSHOP/public/css/auth/signin.css
@@ -190,10 +190,12 @@ header img {
 
 .input-phone {
     height: 50px;
+    width: 100%;
     padding-left: 20px;
 }
 .input-password {
     height: 50px;
+    width: 100%;
     padding-left: 20px;
 }
 .btn-signin {
